--- a/css/main.css
+++ b/css/main.css
@@ -380,7 +380,7 @@ a {
   justify-content: space-between;
 }
 
-.copyright {
+.copyright p {
   color: #bbbe65;
   font-size: 1vw;
   font-weight: 400;
@@ -628,7 +628,7 @@ a {
   .Phone {
     font-size: 1vh;
   }
-  .copyright {
+  .copyright p {
     font-size: 1vh;
   }
 }
